029_power_rec/grade.txt
Grading at 09/14/2020:02:36:28.693481
For commit ID 9a7e8dffdf412816ce947e4088264c7e7e71270b
Grading at Mon Sep 14 10:36:28 CST 2020
Attempting to compile power.c
power.c: In function ‘power’:
power.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
